[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flood_monitoring"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "System monitorowania zagrożeń powodziowych"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "sqlalchemy==2.0.23",
    "psycopg2-binary==2.9.9",
    "pydantic==2.5.2",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "alembic==1.12.1",
    "geoalchemy2==0.14.2",
    "shapely==2.0.2",
    "geopandas==0.14.1",
    "rasterio==1.3.9",
    "numpy==1.26.2",
    "pandas==2.1.3",
    "aiohttp==3.9.1",
    "streamlit==1.45.0",
    "plotly==5.18.0",
    "folium==0.14.0",
    "streamlit-folium==0.15.1",
    "geojson==3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "black==23.11.0",
    "isort==5.12.0",
    "flake8==6.1.0",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.hatch.build.targets.wheel]
packages = ["flood_monitoring"]